--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
 
     implementation 'com.android.support:recyclerview-v7:29.0.0'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
 }
