"Completing" one feature: Save alarm
- Adding class Alarm
- Treat alarm data as an object, and use ArrayList<Array> to show on main screen
- SharedPreferences to keep data from being lost upon session destroy
- RecyclerView to show multiple data from SharedPreferences
- Get location coordinate by using Geocoder

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,9 @@ dependencies {
 
     implementation 'com.android.support:recyclerview-v7:29.0.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'com.google.android.libraries.places:places:2.2.0'
+
+    // to save alarm
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
