--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
          location permissions for the 'MyLocation' functionality.
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-<!--    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />-->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -33,10 +33,7 @@
 
         <activity
             android:name=".ChangeLocation"
-            android:label="@string/title_activity_change_location"></activity>
-        <activity
-            android:name=".TestChangeLayout"
-            android:label="@string/title_activity_test_change_layout" />
+            android:label="@string/title_activity_change_location" />
         <activity android:name=".ChangeRingtone" />
         <activity android:name=".AddAlarm" />
         <activity android:name=".MainActivity">
